; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/genksyms/extr_genksyms.c_add_reference_symbol.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/genksyms/extr_genksyms.c_add_reference_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symbol = type { i32 }
%struct.string_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.symbol* (i8*, i32, %struct.string_list*, i32)* @add_reference_symbol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.symbol* @add_reference_symbol(i8* %0, i32 %1, %struct.string_list* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.string_list*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.string_list* %2, %struct.string_list** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.string_list*, %struct.string_list** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call %struct.symbol* @__add_symbol(i8* %9, i32 %10, %struct.string_list* %11, i32 %12, i32 1)
  ret %struct.symbol* %13
}

declare dso_local %struct.symbol* @__add_symbol(i8*, i32, %struct.string_list*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
